// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - size 1`] = `
<styled.span
  size={8}
>
  <span
    className="datahub-title-first-part"
  >
    Data
  </span>
  <span
    className="datahub-title-last-part"
  >
    Hub
  </span>
</styled.span>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<styled.span
  size={2}
>
  <span
    className="datahub-title-first-part"
  >
    Data
  </span>
  <span
    className="datahub-title-last-part"
  >
    Hub
  </span>
</styled.span>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<span
  className="sc-bdVaJa jtnFdk"
  size={2}
>
  <span
    className="datahub-title-first-part"
  >
    Data
  </span>
  <span
    className="datahub-title-last-part"
  >
    Hub
  </span>
</span>
`;
